--- a/doc/hist_horse_pop.Rmd
+++ b/doc/hist_horse_pop.Rmd
@@ -1,6 +1,11 @@
 ---
 title: "Historical horse population in Canada"
-output: github_document
+output: 
+  html_document:
+    toc: TRUE
+bibliography: ref.bib
+params:
+  province: "British Columbia"
 ---
 
 ```{r setup, include=FALSE}
@@ -30,12 +35,12 @@ Horse population data were sourced from the [Government of Canada's Open Data we
 
 ## Methods
 
-The R programming language and the following R packages were used to perform the analysis: knitr and tidyverse. The code used to perform the analysis and create this report can be found here: https://github.com/ttimbers/equine_numbers_value_canada_rmd.
+The R programming language and the following R packages were used to perform the analysis: [@knitr] and [@tidyverse]. The code used to perform the analysis and create this report can be found here: https://github.com/ttimbers/equine_numbers_value_canada_rmd.
 
 
 ## Results
 
-```{r plot horses, fig.width=10, fig.height=3}
+```{r plot horses, fig.width=10, fig.height=3, , fig.cap="Figure 1. Plot of All Provinces", fig.align='center'}
 horse_plot <- ggplot(horse_pop, aes(x = Ref_Date, y = Value)) +
   geom_point() +
   geom_line() +
@@ -52,7 +57,7 @@ We can see from the visualisation above that Ontario, Saskatchewan and Alberta h
 populations since 1940. This is likely due to the rebound of the Canadian automotive
 industry after the Great Depression and the Second World War. An interesting follow-up visualization would be car sales per year for each Province over the time period visualised above to further support this hypothesis. 
 
-Next we look at the range of the number horses for each provinces at any time point between 1940 - 1972:
+Next we look at the range of the number horses for each provinces at any time point between `r min(horse_pop$Ref_Date)` - `r max(horse_pop$Ref_Date)`:
 
 ```{r max horse table}
 max_horses <- horse_pop %>% 
@@ -61,7 +66,8 @@ max_horses <- horse_pop %>%
   group_by(Province) %>% 
   summarize(Maximum = max(Value),
             Minimum = min(Value))
-max_horses
+knitr::kable(max_horses, caption = "Table 1. Population of Horses in Canada") |>
+kableExtra::kable_styling(full_width = FALSE)
 ```
 
 Below we zoom in and look at the province of Alberta:
