--- a/doc/hist_horse_pop.Rmd
+++ b/doc/hist_horse_pop.Rmd
@@ -3,7 +3,7 @@ title: "Historical horse population in Canada"
 output: 
   html_document:
     toc: TRUE
-bibliography: ref.bib
+bibliography: reference.bib
 params:
   province: "British Columbia"
 ---
@@ -70,11 +70,11 @@ knitr::kable(max_horses, caption = "Table 1. Population of Horses in Canada") |>
 kableExtra::kable_styling(full_width = FALSE)
 ```
 
-Below we zoom in and look at the province of Alberta:
+Below we zoom in and look at the province of `r params$province`:
 
-```{r plot province, fig.width=5, fig.height=4}
+```{r plot province, fig.width=5, fig.height=4, fig.cap="Figure 2. Plot of the selected Province", fig.align='center'}
 province_plot <- horse_pop %>% 
-  filter(GEO == "Alberta") %>% 
+  filter(GEO == params$province) %>% 
   ggplot(aes(x = Ref_Date, y = Value)) +
   geom_point() +
   geom_line() +
@@ -86,3 +86,11 @@ province_plot <- horse_pop %>%
   theme(axis.text.x = element_text(angle = 90, hjust = 1))
 province_plot
 ```
+
+Console: `rmarkdown::render("doc/hist_horse_pop.Rmd")`
+
+Terminal: `Rscript -e "rmarkdown::render('doc/hist_horse_pop.Rmd')"`
+
+Terminal with params -   `Rscript -e "rmarkdown::render('doc/hist_horse_pop.Rmd', output_format = 'pdf_document', params=list(province='British Columbia'))"`
+
+## References
